--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "console.table": "^0.10.0",
     "express": "^4.17.1",
+    "inquirer": "^8.2.4",
     "jshint": "^2.12.0",
-    "mysql2": "^2.2.5",
-    "inquirer": "^8.2.4"
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.10"
   }
 }
