--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "inquirer": "^8.2.4",
     "jshint": "^2.12.0",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.10"
