--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "main",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "boxen": "4.0",
+    "cfonts": "^3.2.0",
+    "chalk": "^4.1.0",
     "console.table": "^0.10.0",
-    "express": "^4.17.1",
+    "dotenv": "^8.2.0",
     "inquirer": "^8.2.4",
     "jshint": "^2.12.0",
-    "mysql2": "^2.2.5",
-    "dotenv": "^8.2.0"
+    "mysql2": "^2.2.5"    
   },
   "devDependencies": {
     "@types/node": "^20.4.10"
